--- a/index.html
+++ b/index.html
@@ -7,6 +7,35 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
+
+  <div class="container min-h-screen bg-white-100 bg-cover px-28 py-5 relative">
+    <nav class="flex items-center px-28 py-5">
+    <img src="images/coffee-logo.png.png" class="w-40 cursor-pointer">
+    <ul class="flex-1 text-center">
+      <li class="list-none inline-block px-5"><a href="#" class="no-underline text-black px-2">Home</a></li>
+      <li class="list-none inline-block px-5"><a href="#" class="no-underline text-black px-2">About</a></li>
+      <li class="list-none inline-block px-5"><a href="#" class="no-underline text-black px-2">Feature</a></li>
+      <li class="list-none inline-block px-5"><a href="#" class="no-underline text-black px-2">Contact</a></li>
+    </ul>
+    <img src="images/shopping-cart.png.png" class="w-8 cursor-pointer">
+  </nav>
+
+  <div class="text-white mt-48 max-w-xl">
+    <h1 class="text-6xl font-semibold leading-normal text-black">Coffee delivery in 30 minutes</h1>
+    <p class="text-black">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Aliquam, sunt!
+    </p>
+
+    <div class="mt-10"><a href="#" class="bg-green-700 rounded-3xl px-3 px-8 font-medium inline-block mr-4 uppercase hover:border-green-700 hover:bg-transparent hover:text-white duration-300 hover:border border border-transparent text-black">Order Here</a>
+      <a href="#" class="text-black">Download app<span class="text-lg inline-block rotate-90 text-black">&#10148</span></a>
+    </div>
+  </div>
+  <img src="images/coffee-image.png.png" class="w-fuull xl:w-1/2 xl:absolute bottom-0 right-20">
+  </div>
+
+  <hr />
+  <footer class="text-2xl text-white font-mono w-full h-34 bg-gray-600">
+    <p>made by Zimbini S. Sambunjana Coffee Shop &copy~~~~~~</p>
+</footer>
   
 </body>
 </html>
